Projects page added

--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -2,8 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>My Website</title>
+    <title>{{title}}</title>
+    <link rel="stylesheet" type="text/css" href="/css/style.css">
 </head>
 <body>
+
+<main>
+
+<nav>
+    <a href="/">Home page</a>
+    <a href="/about">About page</a>
+    <a href="/projects">Projects page</a>
+</nav>
 
 <h1>{{title}}</h1>
